# lensdb

./: .gitignore  README.md  plan.md  pyproject.toml  test_imports.py
src/: baseline.py  benchmark_functions.py  comprehensive_test.py  embeddings_analyzer.py  ground_truth_extractor.py  main.py  main_train.py  utils.py
src/detectors/: object_detector.py
src/embeddings/: embedder.py
src/indexing/: faiss_index.py
src/keyframe/: keyframe_base.py  keyframe_selectors.py  kf_eval.py  preselect_base.py  preselect_methods.py  run_kf_bench.py  run_kf_bench_embeddings.py  run_preselect.py  run_preselect_updated.py
src/models/: count_predictor.py  model_configs.py
src/pipeline/: av_embd_pipeline.py  detection_pipeline.py  embedding_pipeline.py  frame_sampler.py  keyframe_pipeline.py  pipeline.py  video_reader.py
src/query/: semantic_query.py
src/training/: coco_dataset.py  download_coco.py  evaluator.py  train_pipeline.py  trainer.py  virat_dataset.py
src/utils/: __init__.py
src/video/: video_reader.py
