[tool.poetry]
name = "traffic-video-pipeline"
version = "0.1.0"
description = "Pipeline to sample frames from videos and extract embeddings"
authors = ["Raj Shah", "Karvy Mohnot"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
numpy = "^1.26.0"
transformers = "^4.44.0"
Pillow = "^10.4.0"
matplotlib = "^3.10.6"
scikit-learn = "^1.7.2"
ultralytics = "^8.3.202"
pandas = "^2.3.2"
pycocotools = "^2.0.10"
faiss-cpu = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0"